--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.3.1-canary.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "typescript": "5.0.4"
   }
 }
